# json-ld-nostd

btree-range-map/: Cargo.toml
btree-range-map/src/: range.rs
btree-slab/: Cargo.toml
btree-slab/src/: lib.rs  utils.rs
btree-slab/src/generic/: map.rs  node.rs  set.rs
btree-slab/src/generic/map/: entry.rs  ext.rs
btree-slab/src/generic/node/: addr.rs  internal.rs  item.rs  leaf.rs
cc-traits/: Cargo.toml
ciborium/ciborium/: Cargo.toml
combination/: Cargo.toml
combination/src/: combine.rs  lib.rs  permutate.rs
contextual/: Cargo.toml
contextual/src/: display.rs  lib.rs  try_from.rs
decoded-char/: Cargo.toml
decoded-char/src/: lib.rs
educe/: Cargo.toml
educe/src/: lib.rs  support_traits.rs
iref/: .gitignore  Cargo.toml
iref/src/: serde.rs
json-ld/: Cargo.toml
json-ld/crates/compaction/: Cargo.toml
json-ld/crates/compaction/src/: document.rs  iri.rs  lib.rs  node.rs  property.rs  value.rs
json-ld/crates/context-processing/: Cargo.toml
json-ld/crates/context-processing/src/: lib.rs  processed.rs  stack.rs
json-ld/crates/context-processing/src/algorithm/: define.rs  iri.rs  merged.rs  mod.rs
json-ld/crates/core/: Cargo.toml
json-ld/crates/core/src/: id.rs  indexed.rs  lang_string.rs  lib.rs  mode.rs  print.rs  quad.rs  serialization.rs  term.rs  ty.rs  warning.rs
json-ld/crates/core/src/context/: definition.rs  inverse.rs  mod.rs
json-ld/crates/core/src/deserialization/object/: value.rs
json-ld/crates/core/src/document/: expanded.rs  flattened.rs  mod.rs
json-ld/crates/core/src/flattening/: environment.rs  mod.rs  node_map.rs
json-ld/crates/core/src/loader/: chain.rs  fs.rs  map.rs  mod.rs  none.rs
json-ld/crates/core/src/loader/reqwest/: content_type.rs  link.rs
json-ld/crates/core/src/object/: list.rs  mapped_eq.rs  mod.rs  typ.rs  value.rs
json-ld/crates/core/src/object/node/: mod.rs  multiset.rs  properties.rs  reverse_properties.rs
json-ld/crates/core/src/rdf/: mod.rs  quad.rs
json-ld/crates/core/src/utils/: comparison.rs  hash.rs
json-ld/crates/expansion/: Cargo.toml
json-ld/crates/expansion/src/: array.rs  document.rs  element.rs  error.rs  expanded.rs  lib.rs  literal.rs  node.rs  value.rs  warning.rs
json-ld/crates/syntax/: Cargo.toml
json-ld/crates/syntax/src/: compact_iri.rs  compare.rs  container.rs  direction.rs  error.rs  expandable.rs  into_json.rs  keyword.rs  lang.rs  lib.rs  nullable.rs  print_ld.rs  try_from_json.rs  utils.rs
json-ld/crates/syntax/src/context/: mod.rs  print.rs  try_from_json.rs
json-ld/crates/syntax/src/context/definition/: import.rs  key.rs  mod.rs  reference.rs  type_.rs  version.rs  vocab.rs
json-ld/crates/syntax/src/context/term_definition/: id.rs  index.rs  mod.rs  nest.rs  type_.rs
json-ld/src/: lib.rs
json-ld/src/processor/: mod.rs  remote_document.rs
json-number/: Cargo.toml
json-number/src/: lib.rs  serde_json.rs
json-syntax/: Cargo.toml
json-syntax/src/: array.rs  code_map.rs  kind.rs  lib.rs  try_from.rs  unordered.rs
json-syntax/src/object/: index_map.rs  mod.rs
json-syntax/src/parse/: mod.rs  value.rs
json-syntax/src/print/: contextual.rs  mod.rs
json-syntax/src/serde/: de.rs  ser.rs
json-syntax/tests/: generate.rb  parse.rs
langtag/: Cargo.toml
langtag/src/: grandfathered.rs  lib.rs  utils.rs
langtag/src/normal/: extension.rs  mod.rs  private_use.rs  region.rs  script.rs  variant.rs
langtag/src/normal/language/: extlang.rs  mod.rs  primary.rs
linked-data/: Cargo.toml
linked-data-rs/: Cargo.toml
linked-data-rs/derive/: Cargo.toml
linked-data-rs/derive/src/: lib.rs
linked-data-rs/src/: rdf.rs  resource.rs  subject.rs
linked-data-rs/src/datatypes/: ser.rs
linked-data-rs/src/impl/rdf_types/: dataset_graph_view.rs
linked-data/src/: graph.rs  lib.rs  macros.rs  predicate.rs  quads.rs  rdf.rs  subject.rs
locspan/: Cargo.toml
locspan/src/: lib.rs  location.rs  meta.rs  span.rs  (+1 more)
mime/: Cargo.toml
mown/: Cargo.toml
pct-str/: Cargo.toml
raw-btree/: Cargo.toml
rdf-types/: Cargo.toml
rdf-types/.github/workflows/: ci.yml
rdf-types/src/pattern/triple/: canonical.rs
rdf-types/src/vocabulary/impl/indexed/: mod.rs
ssi/: Cargo.toml
ssi/crates/crypto/: Cargo.toml
ssi/crates/crypto/src/: lib.rs
ssi/crates/crypto/src/hashes/: sha.rs  sha256.rs
ssi/crates/rdf/: Cargo.toml
ssi/crates/rdf/src/: expand.rs  lib.rs  urdna2015.rs
ssi/src/: lib.rs
static-iref/: Cargo.toml
static-regular-grammar/: Cargo.toml
static-regular-grammar/examples/: iri.rs  test.rs  uri.rs
static-regular-grammar/src/: grammar.rs  lib.rs
static-regular-grammar/src/grammar/: abnf.rs
static-regular-grammar/src/token/: byte.rs  char.rs
static-regular-grammar/src/utils/: case.rs  scc.rs
utf8-decode/: Cargo.toml
xsd-types/: .gitignore  Cargo.toml
xsd-types/src/: lib.rs  types.rs
xsd-types/src/lexical/: any_uri.rs  base64_binary.rs  boolean.rs  date.rs  double.rs  float.rs  g_day.rs  g_month.rs  g_month_day.rs  g_year.rs  g_year_month.rs  hex_binary.rs  mod.rs  q_name.rs  time.rs
xsd-types/src/lexical/date_time/: date_time_stamp.rs  mod.rs
xsd-types/src/lexical/decimal/: integer.rs  mod.rs
xsd-types/src/lexical/decimal/integer/: non_negative_integer.rs  non_positive_integer.rs
xsd-types/src/lexical/decimal/integer/non_negative_integer/: positive_integer.rs
xsd-types/src/lexical/decimal/integer/non_positive_integer/: negative_integer.rs
xsd-types/src/lexical/duration/: day_time_duration.rs  mod.rs  year_month_duration.rs
xsd-types/src/lexical/string/: id.rs  idref.rs  language.rs  mod.rs  name.rs  ncname.rs  nmtoken.rs  normalized.rs  token.rs
xsd-types/src/value/: base64_binary.rs  boolean.rs  date.rs  double.rs  float.rs  hex_binary.rs  mod.rs
xsd-types/src/value/date_time/: date_time_stamp.rs  mod.rs
xsd-types/src/value/decimal/: integer.rs  mod.rs
xsd-types/src/value/decimal/integer/: non_negative_integer.rs  non_positive_integer.rs
xsd-types/src/value/string/: id.rs  idref.rs  language.rs  mod.rs  name.rs  ncname.rs  nmtoken.rs  normalized.rs  token.rs
xsd-types/utils/: generate.rb
(+27 files in other folders)
