[package]
name = "json-ld"
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
documentation.workspace = true
description = "JSON-LD implementation"
readme = "README.md"

[features]
default = ["std"]
std = [
	"json-syntax/std",
	"json-ld-core/std",
	"json-ld-context-processing/std",
	"json-ld-expansion/std",
	"iref/std",
	"rdf-types/std",
	]
reqwest = ["json-ld-core/reqwest"]
serde = ["json-ld-syntax/serde", "json-ld-core/serde"]

[dependencies]
json-ld-syntax.workspace = true
json-ld-core.workspace = true
json-ld-context-processing.workspace = true
json-ld-expansion.workspace = true
json-syntax.workspace = true
futures.workspace = true
locspan.workspace = true
iref.workspace = true
rdf-types.workspace = true
contextual.workspace = true
thiserror-nostd-notrait.workspace = true

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
	"crates/*"
]

resolver = "2"

[workspace.package]
authors = ["Timothée Haudebourg <timothee@haudebourg.net>"]
categories = ["web-programming", "database", "data-structures"]
keywords = ["json-ld", "json", "semantic-web", "linked-data", "rdf"]
repository = "https://github.com/timothee-haudebourg/json-ld"
documentation = "https://docs.rs/json-ld"
license = "MIT/Apache-2.0"
edition = "2021"
version = "0.21.1"

[workspace.dependencies]
ahash = { version = "=0.8.6", default-features = false, features = ["no-rng"] }
json-ld = { path = ".", version = "0.21.1", default-features = false }
json-ld-syntax = { path = "crates/syntax", default-features = false, version = "0.21.1" }
json-ld-core = { path = "crates/core", default-features = false, version = "0.21.1" }
json-ld-context-processing = { path = "crates/context-processing", default-features = false, version = "0.21.1" }
json-ld-expansion = { path = "crates/expansion", default-features = false, version = "0.21.1" }
json-syntax = { path = "../json-syntax", default-features = false }
iref = { path = "../iref", default-features = false }
static-iref = { path = "../static-iref", default-features = false }
langtag = { path = "../langtag", default-features = false }
rdf-types = { path = "../rdf-types", default-features = false }
contextual = { path = "../contextual", default-features = false }
locspan = { path = "../locspan", default-features = false }
educe = { path = "../educe" }
futures = { version = "0.3", default-features = false }
mown = { path = "../mown", default-features = false }
hashbrown = "=0.14.3"
smallvec = "1.10"
log = "0.4.17"
thiserror-nostd-notrait = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
indexmap = { version = "2.2", default-features = false }
linked-data = { path = "../linked-data", default-features = false }
