[package]
name = "json-number"
version = "0.4.8"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"

description = "JSON number parsing and storage"
categories = ["data-structures"]
keywords = ["json", "number", "parser"]
repository = "https://github.com/timothee-haudebourg/json-number"
documentation = "https://docs.rs/json-number"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = [ "std" ]
std = []
smallnumberbuf = [ "smallvec" ]
canonical = [ "ryu-js" ]
serde_json = [ "dep:serde_json" ]

[dependencies]
smallvec = { version = "1.8.1", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
ryu-js = { version = "1.0", optional = true }
no_std_io = { version = "0.6.0" }

[dev-dependencies]
serde_json = { version = "1", features = ["arbitrary_precision"] }