[package]
name = "json-syntax"
version = "0.12.5"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Strict JSON parsing and mapping library"
categories = ["parsing", "data-structures"]
keywords = ["parsing", "json", "rfc", "mapping"]
repository = "https://github.com/timothee-haudebourg/json-syntax"
documentation = "https://docs.rs/json-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = [ "std" ]

std = [ "utf8-decode/std", "json-number/std" ]

## JSON Canonicalization Scheme (JCS) implementation. 
canonicalize = [ "ryu-js", "json-number/canonical" ]

## Serialization/Deserialization support using `serde`.
serde = [ "dep:serde", "json-number/serde", "smallstr/serde" ]

## Compatibility layer with the `serde_json` crate.
serde_json = [ "dep:serde_json", "json-number/serde_json" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
json-number = { path = "../json-number", default-features = false, features = [ "smallnumberbuf" ] }
smallvec = "1.9"
smallstr = "0.3"
locspan = { path = "../locspan", default-features = false }
locspan-derive = "0.6"
indexmap = { version = "2.2", default-features = false }
decoded-char = { path = "../decoded-char", default-features = false }
hashbrown = { version = "0.14.5", features = [ "raw" ] }
ahash = { version = "0.8.6", default-features = false }
contextual = { path = "../contextual", default-features = false, optional = true }
ryu-js = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
utf8-decode = { path = "../utf8-decode", default-features = false }
no_std_io = { version = "0.6.0" }

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }

[[example]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "serde_json"
required-features = ["serde_json"]
