[package]
name = "langtag"
version = "0.4.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
categories = ["parsing", "data-structures"]
keywords = ["language", "tag", "langtag", "rfc"]
description = "Language tags implementation following RFC 5646"
repository = "https://github.com/timothee-haudebourg/langtag"
documentation = "https://docs.rs/langtag"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = ["std"]
std = [ "thiserror-nostd-notrait/std"]
## Enable serialization/deserialization with `serde`.
serde = ["dep:serde"]

[dependencies]
static-regular-grammar = { path = "../static-regular-grammar", default-features = false }
thiserror-nostd-notrait = { version = "1.0", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }