[package]
name = "rdf-types"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Data-structures and traits definitions for RDF."
categories = ["data-structures"]
keywords = ["rdf", "w3c", "triple", "quad", "blank"]
repository = "https://github.com/timothee-haudebourg/rdf-types"
documentation = "https://docs.rs/rdf-types"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
version = "0.22.4"

[features]
default = ["std"]
std = ["iref/std", "static-iref/std", "thiserror-nostd-notrait/std"]
serde = ["dep:serde", "iref/serde", "langtag/serde"]
uuid-generator = ["uuid-generator-v3", "uuid-generator-v4", "uuid-generator-v5"]
uuid-generator-v3 = ["uuid", "uuid/v3"]
uuid-generator-v4 = ["uuid", "uuid/v4"]
uuid-generator-v5 = ["uuid", "uuid/v5"]

[dependencies]
# Major dependencies (major version must be synchronized).
iref = { path = "../iref", default-features = false }
static-iref = { path = "../static-iref", default-features = false }
langtag = { path = "../langtag", default-features = false }
thiserror-nostd-notrait = { version = "1.0", default-features = false }
contextual = { version = "0.1.6", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
uuid = { version = "0.8", optional = true }

# Minor dependencies.
indexmap = { version = "1.9", default-features = false }
educe = "0.5.11"
slab = "0.4.8"
replace_with = "0.1.7"
raw-btree = "0.2.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }