[package]
name = "xsd-types"
version = "0.9.4"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "XSD data types."
categories = ["data-structures"]
keywords = ["xsd", "w3c", "datatype"]
repository = "https://github.com/timothee-haudebourg/xsd-types"
documentation = "https://docs.rs/xsd-types"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = [ "std" ]
std = [ "iref/std", "static-iref/std", "static-regular-grammar/std", "thiserror-nostd-notrait/std" ]

[dependencies]
iref = { path = "../iref", default-features = false }
static-iref = { path = "../static-iref", default-features = false }
pretty_dtoa = "0.3.0"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2.15"
lazy_static = "1.4.0"
thiserror-nostd-notrait = { version = "1.0", default-features = false }
once_cell = "1.17.0"
ordered-float = "3.4.0"
chrono = "0.4.26"
serde = { version = "1.0", optional = true }
static-regular-grammar = { path = "../static-regular-grammar", default-features = false }
