[package]
name = "xsd-types"
version = "0.9.4"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "XSD data types."
categories = ["data-structures"]
keywords = ["xsd", "w3c", "datatype"]
repository = "https://github.com/timothee-haudebourg/xsd-types"
documentation = "https://docs.rs/xsd-types"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = [ "std" ]
std = [
    "iref/std",
    "static-iref/std",
    "static-regular-grammar/std",
    "thiserror-nostd-notrait/std",
    "num-rational/std",
    "num-bigint/std",
    "chrono/std",
    "chrono/clock" ]

[dependencies]
iref = { path = "../iref", default-features = false }
static-iref = { path = "../static-iref", default-features = false }
pretty_dtoa = { path = "../pretty_dtoa" }
num-bigint = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2.15", default-features = false }
lazy_static = { version = "1.4.0", default_features = false, features = ["spin_no_std"] }
thiserror-nostd-notrait = { version = "1.0", default-features = false }
once_cell = { version = "1.17.0", default-features = false, features = ["alloc"] }
ordered-float = { version = "3.4.0", default-features = false }
chrono = { version = "0.4.26", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, optional = true }
static-regular-grammar = { path = "../static-regular-grammar", default-features = false }
