[package]
name = "json-ld-compaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "JSON-LD document compaction implementation"
documentation = "https://docs.rs/json-ld-compaction"
readme = "README.md"

[features]
default = ["std"]
std = [
    "json-ld-core/std",
    "json-ld-syntax/std",
    "json-ld-context-processing/std",
    "json-ld-expansion/std",
    "json-syntax/std",
    "iref/std",
    "rdf-types/std",
    "langtag/std",
    "indexmap/std"
    ]

[dependencies]
json-ld-core.workspace = true
json-ld-syntax.workspace = true
json-ld-context-processing.workspace = true
json-ld-expansion.workspace = true
json-syntax.workspace = true
langtag.workspace = true
iref.workspace = true
contextual.workspace = true
rdf-types.workspace = true
futures.workspace = true
mown.workspace = true
educe.workspace = true
indexmap.workspace = true
thiserror-nostd-notrait.workspace = true