[package]
name = "json-ld-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "JSON-LD core types and traits"
documentation = "https://docs.rs/json-ld-core"
readme = "README.md"

[features]
default = ["std"]
std = ["json-ld-syntax/std", "json-syntax/std", "rdf-types/std", "iref/std", "static-iref/std", "linked-data/std", "langtag/std"]
reqwest = ["bytes", "dep:reqwest", "utf8-decode", "reqwest-middleware"]
serde = ["dep:serde", "json-syntax/serde"]

[dependencies]
json-ld-syntax.workspace = true
json-syntax = { workspace = true, features = ["contextual", "canonicalize"] }
rdf-types = { workspace = true, features = ["contextual"] }
contextual.workspace = true
log.workspace = true
educe.workspace = true
iref.workspace = true
static-iref.workspace = true
linked-data.workspace = true
futures.workspace = true
langtag.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
ahash = { version = "=0.7.7", default-features = false }
thiserror-nostd-notrait.workspace = true
indexmap.workspace = true
serde = { workspace = true, optional = true }
once_cell = { version = "1.17.0", default-features = false, features = ["alloc"] }
ryu-js = "0.2.2"
permutohedron = { version = "0.2" }
pretty_dtoa = { path = "../../../pretty_dtoa" }
mime = { path = "../../../mime", default-features = false }

# For the reqwest loader
reqwest = { version = "0.12", optional = true }
reqwest-middleware = { version = "0.3", optional = true }
bytes = { version = "1.3", optional = true }
utf8-decode = { version = "1.0.1", optional = true }
