[package]
name = "json-ld-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
description = "JSON-LD syntax"
documentation = "https://docs.rs/json-ld-syntax"
readme = "README.md"

[features]
default = ["std"]
std = ["json-syntax/std", "iref/std", "rdf-types/std", "langtag/std"]
serde = ["dep:serde", "iref/serde", "locspan/serde", "json-syntax/serde", "indexmap/serde"]

[dependencies]
iref.workspace = true
langtag.workspace = true
rdf-types.workspace = true
json-syntax.workspace = true
locspan.workspace = true
hashbrown.workspace = true
ahash = { version = "=0.7.7", default-features = false }
educe.workspace = true
smallvec.workspace = true
contextual.workspace = true
thiserror-nostd-notrait.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
indexmap.workspace = true
decoded-char = { path = "../../../decoded-char", default-features = false }
